# wiki-camp

./: .gitignore  get-dictionary.ts  i18n-config.ts  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js
app/: globals.css  layout.tsx  providers.tsx  style.scss  util.ts  util.tsx
app/[lang]/: main.tsx  myTemplate.tsx  page.tsx
app/cards/: page.tsx
app/home/: FutureSwitcher.tsx  ThemeSwitcher.tsx  defaultNavItems.tsx  index.tsx  locale-switcher.tsx  navbar.tsx  sidebar.tsx
app/icon/: index.tsx
app/master/: main.ts  server.ts  text.ts
app/template/: wip.tsx
app/text/: main.ts
data/: ngwords.txt
data/en/: appointment.json  appointment_surprise_reaction.json  area.json  banner.json  birth_festival.json  camp_aptitude_adjust_coefficient.json  camp_clear_eval.json  challenge.json  (+62 more)
redux/: provider.tsx  store.ts
rust-camper/: .gitignore  Cargo.toml
rust-camper/src/: main.rs
rust-camper/src/data/: bin_dict.rs  class_struct.rs  extract_cs.rs  mod.rs  name_master.rs  replace_numeric_keys.rs  use_git.rs
rust-camper/src/file/: dir.rs  env.rs  mod.rs  rw.rs
rust-camper/src/game/: account.rs  cnst.rs  mod.rs  version.rs
rust-camper/src/game/client/: authorize.rs  certificate.rs  changenickname.rs  generate.rs  master.rs  mod.rs  notification.rs  ranking.rs  resource.rs  transfer.rs  user_profile.rs
rust-camper/src/game/client/user/: load.rs  mod.rs  profile.rs  profileicon.rs
rust-camper/src/game/task/: friend.rs  master.rs  mod.rs  profile.rs  ranking.rs
rust-camper/src/image/: dl.rs  merge.rs  mod.rs  parse_asset.py
(+660 files in other folders)
