[package]
name = "rust-camper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
chrono-tz = "0.8.3"
csv = "1.2.2"
dotenv = "0.15.0"
flate2 = "1.0.26"
futures = "0.3"
git2 = "0.18.0"
image = "0.24.7"
lazy_static = "1.4.0"
md5 = "0.7.0"
rand = "0.8.5"
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
ssh2 = "0.9.4"
time = "0.1"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"
